Login and design2

--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 </button>
 
 
-                <div class="navbar-brand"> <img src="~/Images/logot.png" width="106" height="45"> &nbsp; @Html.ActionLink("SDTRCare", "Index", "Home", new { area = "" }, new { @style = "color:white;" })</div>
+                <div class="navbar-brand"> <img src="~/Images/logot.png" width="106" height="45"> &nbsp; &nbsp; <b style="color:white">SDTR<i>Care</i></b> </div>
 
 
             </div>
