--- a/TimeTracking/Views/Employee/TimeSheet.cshtml
+++ b/TimeTracking/Views/Employee/TimeSheet.cshtml
@@ -79,18 +79,66 @@
                 <td>
                     <select data-bind="value:TimeIn" class="form-control">
                         <option value="-1"></option>
-                        <option value="1">01:00</option>
-                        <option value="2">02:00</option>
-                        <option value="3">03:00</option>
-                        <option value="4">04:00</option>
-                        <option value="5">05:00</option>
-                        <option value="6">06:00</option>
-                        <option value="7">07:00</option>
-                        <option value="8">08:00</option>
-                        <option value="9">09:00</option>
-                        <option value="10">10:00</option>
-                        <option value="11">11:00</option>
-                        <option value="12">12:00</option>
+                        <option value="1-0">01:00</option>
+                        <option value="1-15">01:15</option>
+                        <option value="1-30">01:30</option>
+                        <option value="1-45">01:45</option>
+
+                        <option value="2-0">02:00</option>
+                        <option value="2-15">02:15</option>
+                        <option value="2-30">02:30</option>
+                        <option value="2-45">02:45</option>
+
+                        <option value="3-0">03:00</option>
+                        <option value="3-15">03:15</option>
+                        <option value="3-30">03:30</option>
+                        <option value="3-45">03:45</option>
+
+                        <option value="4-0">04:00</option>
+                        <option value="4-15">04:15</option>
+                        <option value="4-30">04:30</option>
+                        <option value="4-45">04:45</option>
+
+                        <option value="5-0">05:00</option>
+                        <option value="5-15">05:15</option>
+                        <option value="5-30">05:30</option>
+                        <option value="5-45">05:45</option>
+
+                        <option value="6-0">06:00</option>
+                        <option value="6-15">06:15</option>
+                        <option value="6-30">06:30</option>
+                        <option value="6-45">06:45</option>
+
+                        <option value="7-0">07:00</option>
+                        <option value="7-15">07:15</option>
+                        <option value="7-30">07:30</option>
+                        <option value="7-45">07:45</option>
+
+                        <option value="8-0">08:00</option>
+                        <option value="8-15">08:15</option>
+                        <option value="8-30">08:30</option>
+                        <option value="8-45">08:45</option>
+
+                        <option value="9-0">09:00</option>
+                        <option value="9-15">09:15</option>
+                        <option value="9-30">09:30</option>
+                        <option value="9-30">09:30</option>
+
+                        <option value="10-0">10:00</option>
+                        <option value="10-15">10:15</option>
+                        <option value="10-30">10:30</option>
+                        <option value="10-45">10:45</option>
+
+                        <option value="11-0">11:00</option>
+                        <option value="11-15">11:15</option>
+                        <option value="11-30">11:30</option>
+                        <option value="11-45">11:45</option>
+
+                        <option value="12-0">12:00</option>
+                        <option value="12-15">12:15</option>
+                        <option value="12-30">12:30</option>
+                        <option value="12-45">12:45</option>
+
 
                     </select>
                 </td>
@@ -104,18 +152,65 @@
                 <td>
                     <select data-bind="value:TimeOut" class="form-control">
                         <option value="-1"></option>
-                        <option value="1">01:00</option>
-                        <option value="2">02:00</option>
-                        <option value="3">03:00</option>
-                        <option value="4">04:00</option>
-                        <option value="5">05:00</option>
-                        <option value="6">06:00</option>
-                        <option value="7">07:00</option>
-                        <option value="8">08:00</option>
-                        <option value="9">09:00</option>
-                        <option value="10">10:00</option>
-                        <option value="11">11:00</option>
-                        <option value="12">12:00</option>
+                        <option value="1-0">01:00</option>
+                        <option value="1-15">01:15</option>
+                        <option value="1-30">01:30</option>
+                        <option value="1-45">01:45</option>
+
+                        <option value="2-0">02:00</option>
+                        <option value="2-15">02:15</option>
+                        <option value="2-30">02:30</option>
+                        <option value="2-45">02:45</option>
+
+                        <option value="3-0">03:00</option>
+                        <option value="3-15">03:15</option>
+                        <option value="3-30">03:30</option>
+                        <option value="3-45">03:45</option>
+
+                        <option value="4-0">04:00</option>
+                        <option value="4-15">04:15</option>
+                        <option value="4-30">04:30</option>
+                        <option value="4-45">04:45</option>
+
+                        <option value="5-0">05:00</option>
+                        <option value="5-15">05:15</option>
+                        <option value="5-30">05:30</option>
+                        <option value="5-45">05:45</option>
+
+                        <option value="6-0">06:00</option>
+                        <option value="6-15">06:15</option>
+                        <option value="6-30">06:30</option>
+                        <option value="6-45">06:45</option>
+
+                        <option value="7-0">07:00</option>
+                        <option value="7-15">07:15</option>
+                        <option value="7-30">07:30</option>
+                        <option value="7-45">07:45</option>
+
+                        <option value="8-0">08:00</option>
+                        <option value="8-15">08:15</option>
+                        <option value="8-30">08:30</option>
+                        <option value="8-45">08:45</option>
+
+                        <option value="9-0">09:00</option>
+                        <option value="9-15">09:15</option>
+                        <option value="9-30">09:30</option>
+                        <option value="9-30">09:30</option>
+
+                        <option value="10-0">10:00</option>
+                        <option value="10-15">10:15</option>
+                        <option value="10-30">10:30</option>
+                        <option value="10-45">10:45</option>
+
+                        <option value="11-0">11:00</option>
+                        <option value="11-15">11:15</option>
+                        <option value="11-30">11:30</option>
+                        <option value="11-45">11:45</option>
+
+                        <option value="12-0">12:00</option>
+                        <option value="12-15">12:15</option>
+                        <option value="12-30">12:30</option>
+                        <option value="12-45">12:45</option>
 
                     </select>
                 </td>
@@ -132,18 +227,65 @@
                 <td>
                     <select data-bind="value:TimeIn2,visible:Time2" class="form-control">
                         <option value="-1"></option>
-                        <option value="1">01:00</option>
-                        <option value="2">02:00</option>
-                        <option value="3">03:00</option>
-                        <option value="4">04:00</option>
-                        <option value="5">05:00</option>
-                        <option value="6">06:00</option>
-                        <option value="7">07:00</option>
-                        <option value="8">08:00</option>
-                        <option value="9">09:00</option>
-                        <option value="10">10:00</option>
-                        <option value="11">11:00</option>
-                        <option value="12">12:00</option>
+                        <option value="1-0">01:00</option>
+                        <option value="1-15">01:15</option>
+                        <option value="1-30">01:30</option>
+                        <option value="1-45">01:45</option>
+
+                        <option value="2-0">02:00</option>
+                        <option value="2-15">02:15</option>
+                        <option value="2-30">02:30</option>
+                        <option value="2-45">02:45</option>
+
+                        <option value="3-0">03:00</option>
+                        <option value="3-15">03:15</option>
+                        <option value="3-30">03:30</option>
+                        <option value="3-45">03:45</option>
+
+                        <option value="4-0">04:00</option>
+                        <option value="4-15">04:15</option>
+                        <option value="4-30">04:30</option>
+                        <option value="4-45">04:45</option>
+
+                        <option value="5-0">05:00</option>
+                        <option value="5-15">05:15</option>
+                        <option value="5-30">05:30</option>
+                        <option value="5-45">05:45</option>
+
+                        <option value="6-0">06:00</option>
+                        <option value="6-15">06:15</option>
+                        <option value="6-30">06:30</option>
+                        <option value="6-45">06:45</option>
+
+                        <option value="7-0">07:00</option>
+                        <option value="7-15">07:15</option>
+                        <option value="7-30">07:30</option>
+                        <option value="7-45">07:45</option>
+
+                        <option value="8-0">08:00</option>
+                        <option value="8-15">08:15</option>
+                        <option value="8-30">08:30</option>
+                        <option value="8-45">08:45</option>
+
+                        <option value="9-0">09:00</option>
+                        <option value="9-15">09:15</option>
+                        <option value="9-30">09:30</option>
+                        <option value="9-30">09:30</option>
+
+                        <option value="10-0">10:00</option>
+                        <option value="10-15">10:15</option>
+                        <option value="10-30">10:30</option>
+                        <option value="10-45">10:45</option>
+
+                        <option value="11-0">11:00</option>
+                        <option value="11-15">11:15</option>
+                        <option value="11-30">11:30</option>
+                        <option value="11-45">11:45</option>
+
+                        <option value="12-0">12:00</option>
+                        <option value="12-15">12:15</option>
+                        <option value="12-30">12:30</option>
+                        <option value="12-45">12:45</option>
 
                     </select>
                 </td>
@@ -157,18 +299,65 @@
                 <td>
                     <select data-bind="value:TimeOut2,visible:Time2" class="form-control">
                         <option value="-1"></option>
-                        <option value="1">01:00</option>
-                        <option value="2">02:00</option>
-                        <option value="3">03:00</option>
-                        <option value="4">04:00</option>
-                        <option value="5">05:00</option>
-                        <option value="6">06:00</option>
-                        <option value="7">07:00</option>
-                        <option value="8">08:00</option>
-                        <option value="9">09:00</option>
-                        <option value="10">10:00</option>
-                        <option value="11">11:00</option>
-                        <option value="12">12:00</option>
+                        <option value="1-0">01:00</option>
+                        <option value="1-15">01:15</option>
+                        <option value="1-30">01:30</option>
+                        <option value="1-45">01:45</option>
+
+                        <option value="2-0">02:00</option>
+                        <option value="2-15">02:15</option>
+                        <option value="2-30">02:30</option>
+                        <option value="2-45">02:45</option>
+
+                        <option value="3-0">03:00</option>
+                        <option value="3-15">03:15</option>
+                        <option value="3-30">03:30</option>
+                        <option value="3-45">03:45</option>
+
+                        <option value="4-0">04:00</option>
+                        <option value="4-15">04:15</option>
+                        <option value="4-30">04:30</option>
+                        <option value="4-45">04:45</option>
+
+                        <option value="5-0">05:00</option>
+                        <option value="5-15">05:15</option>
+                        <option value="5-30">05:30</option>
+                        <option value="5-45">05:45</option>
+
+                        <option value="6-0">06:00</option>
+                        <option value="6-15">06:15</option>
+                        <option value="6-30">06:30</option>
+                        <option value="6-45">06:45</option>
+
+                        <option value="7-0">07:00</option>
+                        <option value="7-15">07:15</option>
+                        <option value="7-30">07:30</option>
+                        <option value="7-45">07:45</option>
+
+                        <option value="8-0">08:00</option>
+                        <option value="8-15">08:15</option>
+                        <option value="8-30">08:30</option>
+                        <option value="8-45">08:45</option>
+
+                        <option value="9-0">09:00</option>
+                        <option value="9-15">09:15</option>
+                        <option value="9-30">09:30</option>
+                        <option value="9-30">09:30</option>
+
+                        <option value="10-0">10:00</option>
+                        <option value="10-15">10:15</option>
+                        <option value="10-30">10:30</option>
+                        <option value="10-45">10:45</option>
+
+                        <option value="11-0">11:00</option>
+                        <option value="11-15">11:15</option>
+                        <option value="11-30">11:30</option>
+                        <option value="11-45">11:45</option>
+
+                        <option value="12-0">12:00</option>
+                        <option value="12-15">12:15</option>
+                        <option value="12-30">12:30</option>
+                        <option value="12-45">12:45</option>
 
                     </select>
                 </td>
@@ -191,12 +380,7 @@
             <tr data-bind="visible:HasTime2()!=true">
                 <td colspan="8" align="right"><input type="button" value="save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" /></td>
             </tr >
-            <tr id="Success" style="display:none" data-bind="visible:HasTime2()!=true">
-                <td  colspan="8" align="right"><div id="successdiv" class="text-success"></div></td>
-            </tr>
-            <tr id="error" style="display:none" data-bind="visible:HasTime2()!=true">
-                <td colspan="8" align="right"><div id="errorDiv" class="text-danger"></div></td>
-            </tr>
+          
             <tr data-bind="visible:HasTime2()==true">
                 <td colspan="12" align="right"><input type="button" value="save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" /></td>
             </tr>
@@ -208,6 +392,9 @@
             </tr>
         </tfoot>
     </table>
+          <div id="successdiv" style="display:none" class="text-success">Saved Successfully</div>
+          <div id="errorDiv" style="display:none" class="text-danger">
+      </div>
 </div>
 
 <script type="text/javascript">
