- Add Delete Row option - Bind selected value to the 1st and 2nd Dropdown list - Update layoutall to be layout in username view

--- a/TimeTracking/Views/Employee/TimeSheet.cshtml
+++ b/TimeTracking/Views/Employee/TimeSheet.cshtml
@@ -371,6 +371,7 @@
                 <!--/ko-->
                 <td>
                     <a href="#" data-bind="click:$root.moreTime,visible:Time2()!=true">Add time</a>&nbsp; <a href="#" data-bind="click:$root.moreService">Add Service Code</a>
+                    &nbsp; <a href="#" data-bind="click:$root.deleteRow">Delete</a>
                 </td>
             </tr>
 
