- Add keft side navigation menu - fix save to excel sheet time out

--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -36,9 +36,16 @@
             </div>
         </div>
     </div>
+    <div id="sidebar-wrapper" class="sidebar-toggle">
+        <ul class="sidebar-nav">
+            <li>
+                <a href="@Url.Action("Timesheet", "Employee")">Employee Sheet</a>
+            </li>
+        </ul>
+    </div>
     <div class="container body-content">
-        <br/>
-        @RenderBody()
+            <br/>
+            @RenderBody()
     </div>
 
     @Scripts.Render("~/bundles/jquery")
