--- a/TimeTracking/Content/Site.css
+++ b/TimeTracking/Content/Site.css
@@ -6,7 +6,7 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
+    padding-left: 65px;
     padding-right: 15px;
 }
 
@@ -120,3 +120,56 @@ textarea {
             color: #333;
         }*/
 /*}*/
+
+#sidebar-wrapper {
+    top: 75px;
+    left: -200px;
+    width: 150px;
+    background-color: #004492;
+    color: white;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+}
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    width: 150px;
+    list-style: none;
+}
+
+    .sidebar-nav li {
+        text-indent: 20px;
+        line-height: 50px;
+    }
+
+        .sidebar-nav li a {
+            color: white;
+            display: block;
+            text-decoration: none;
+        }
+
+            .sidebar-nav li a:hover {
+                background: rgba(255,255,255,0.25);
+                color: white;
+                text-decoration: none;
+            }
+
+            .sidebar-nav li a:active, .sidebar-nav li a:focus {
+                text-decoration: none;
+            }
+
+#sidebar-wrapper.sidebar-toggle {
+    transition: all 0.3s ease-out;
+    margin-left: -200px;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper.sidebar-toggle {
+        transition: 0s;
+        left: 200px;
+    }
+}
