--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     <div id="sidebar-wrapper" class="sidebar-toggle">
         <ul class="sidebar-nav">
             <li>
-                <a href="@Url.Action("Timesheet", "Employee")">Add User</a>
+                <a href="@Url.Action("AddUser", "Admin")">Admin</a>
             </li>
             <li>
                 <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
