--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -31,35 +31,35 @@
                         <li>@Html.ActionLink("Add User", "AddUser", "Admin")</li>
 
 
-                    </ul>*@
+                 </ul>*@
                 @Html.Partial("_LoginPartial")
+            </div>
+            <div>
+                <ul class="nav nav-pills">
+
+                    <li>
+                        <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
+                    </li>
+                    <li>
+                        <a href="#">Independant Contractor</a>
+                    </li>
+                    <li>
+                        <a href="#">Vendor</a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("AddUser", "Admin")">Admin</a>
+                    </li>
+                    <li>
+                        <a href="#">Reporting</a>
+                    </li>
+
+                </ul>
             </div>
         </div>
     </div>
-    <div id="sidebar-wrapper" class="sidebar-toggle">
-        <ul class="sidebar-nav">
-
-            <li>
-                <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
-            </li>
-            <li>
-                <a href="#">Independant Contractor</a>
-            </li>
-            <li>
-                <a href="#">Vendor</a>
-            </li>
-            <li>
-                <a href="@Url.Action("AddUser", "Admin")">Admin</a>
-            </li>
-            <li>
-                <a href="#">Reporting</a>
-            </li>
-           
-        </ul>
-    </div>
     <div class="container body-content">
-            <br/>
-            @RenderBody()
+        <br/>
+        @RenderBody()
     </div>
 
     @Scripts.Render("~/bundles/jquery")
