layout and fixes

--- a/TimeTracking/Content/Site.css
+++ b/TimeTracking/Content/Site.css
@@ -10,6 +10,26 @@
     padding-right: 15px;
 }
 
+.nav-tabs > li.tabs > a,
+.nav-tabs > li.tabs > a:hover,
+.nav-tabs > li.tabs > a:focus {
+    color: #555555;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-bottom-color: transparent;
+}
+
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+    color: #555555;
+    cursor: default;
+    background-color: lightblue;
+    border: 1px solid #dddddd;
+    border-bottom-color: transparent;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
