--- a/TimeTracking/Views/Employee/TimeSheet.cshtml
+++ b/TimeTracking/Views/Employee/TimeSheet.cshtml
@@ -8,10 +8,36 @@
 <script src="~/Scripts/Moment.js"></script>
 
 <script src="~/Scripts/Knockout/TimeSheet.js"></script>
+<style>
+    .nav-tabs > li > a {
+        margin-right: 2px;
+        line-height: 1.428571429;
+        border: 1px solid transparent;
+        border-radius: 4px 4px 0 0;
+        color: white;
+    }
 
+        .nav-tabs > li > a:hover {
+            border-color: #eeeeee #eeeeee #dddddd;
+            color: black;
+        }
+</style>
 <div class="container">
     <br />
     <div>
+            <div class="row" data-bind="visible:HasTime2()!=true">
+                <div class="col-sm-12" colspan="8" align="right">
+                    <input type="button" value="Save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
+                    <input type="button" value="Undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />
+                </div>
+            </div>
+            <div class="row" data-bind="visible:HasTime2()==true">
+                <div class="col-sm-12" colspan="12" align="right">
+                    <input type="button" value="Save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
+                    <input type="button" value="Undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />
+                </div>
+            </div>
+       <br/>
         <table class="table table-bordered table-responsive">
             <thead>
                 <tr>
@@ -51,9 +77,9 @@
                         <th>Time Out</th>
                         <th>AM/PM</th>
                         <!-- ko if: HasTime2 -->
-                        <th >Time In</th>
+                        <th>Time In</th>
                         <th>AM/PM</th>
-                        <th >Time Out</th>
+                        <th>Time Out</th>
                         <th>AM/PM</th>
                         <!-- /ko -->
                         <th style="width:8%">Action</th>
@@ -69,16 +95,16 @@
                             <label data-bind="text: dayDate"></label>
                         </td>
                         <td>
-                            <select  data-bind="value:serviceCodeId,options: $root.serviceCodes,
+                            <select data-bind="value:serviceCodeId,options: $root.serviceCodes,
                        optionsText: 'Name',optionsValue: 'Id',optionsCaption: '.'" style="width:45px"></select>
 
                         </td>
                         <td>
-                            <select  data-bind="value:plansectionId,options: $root.PlanSections,
+                            <select data-bind="value:plansectionId,options: $root.PlanSections,
                        optionsText: 'Name',optionsValue: 'Id',optionsCaption: '.'" style="width:40px"></select>
                         </td>
                         <td>
-                            <select data-bind="value:TimeInH1"  style="display:inline-block;width:40px;">
+                            <select data-bind="value:TimeInH1" style="display:inline-block;width:40px;">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -95,27 +121,27 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeInM1"  style="display:inline-block;width:40px;">
+                            <select data-bind="value:TimeInM1" style="display:inline-block;width:40px;">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
                                 <option value="30">30</option>
                                 <option value="45">45</option>
                                 @*<option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>*@
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>*@
                             </select>
                         </td>
                         <td>
-                            <select data-bind="value:isAmIn"  style="width:45px">
+                            <select data-bind="value:isAmIn" style="width:45px">
                                 <option value="-1"></option>
                                 <option value="true">AM</option>
                                 <option value="false">PM</option>
                             </select>
                         </td>
                         <td>
-                            <select data-bind="value:TimeOutH1"  style="display:inline-block;width:40px;">
+                            <select data-bind="value:TimeOutH1" style="display:inline-block;width:40px;">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -132,7 +158,7 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeOutM1"  style="display:inline-block;width:40px;">
+                            <select data-bind="value:TimeOutM1" style="display:inline-block;width:40px;">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
@@ -142,7 +168,7 @@
 
                         </td>
                         <td>
-                            <select data-bind="value:isAmOut"  style="width:45px">
+                            <select data-bind="value:isAmOut" style="width:45px">
                                 <option value="-1"></option>
                                 <option value="true">AM</option>
                                 <option value="false">PM</option>
@@ -153,7 +179,7 @@
 
                         <td>
                             <!-- ko if: Time2 -->
-                            <select data-bind="value:TimeIn2H1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeIn2H1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -170,7 +196,7 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeIn2M1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeIn2M1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
@@ -178,9 +204,8 @@
                                 <option value="45">45</option>
                             </select>
                             <!--/ko-->
-
                             <!-- ko if: !Time2 -->
-                            <select data-bind="value:TimeIn2H1 "  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeIn2H1 " style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -197,7 +222,7 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeIn2M1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeIn2M1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
@@ -208,7 +233,7 @@
 
                         </td>
                         <td>
-                            <select data-bind="value:isAmIn2,visible:Time2"  style="width:45px">
+                            <select data-bind="value:isAmIn2,visible:Time2" style="width:45px">
                                 <option value="-1"></option>
                                 <option value="true">AM</option>
                                 <option value="false">PM</option>
@@ -216,7 +241,7 @@
                         </td>
                         <td>
                             <!-- ko if: Time2 -->
-                            <select data-bind="value:TimeOut2H1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeOut2H1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -233,7 +258,7 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeOut2M1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeOut2M1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
@@ -242,7 +267,7 @@
                             </select>
                             <!--/ko-->
                             <!-- ko if: !Time2 -->
-                            <select data-bind="value:TimeOut2H1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeOut2H1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="1">01</option>
@@ -259,7 +284,7 @@
                                 <option value="12">12</option>
 
                             </select> :
-                            <select data-bind="value:TimeOut2M1"  style="width: 40px;display:inline-block">
+                            <select data-bind="value:TimeOut2M1" style="width: 40px;display:inline-block">
                                 <option value="-1"></option>
                                 <option value="0">00</option>
                                 <option value="15">15</option>
@@ -271,7 +296,7 @@
 
                         </td>
                         <td>
-                            <select data-bind="value:isAmOut2,visible:Time2"  style="width:45px">
+                            <select data-bind="value:isAmOut2,visible:Time2" style="width:45px">
                                 <option value="-1"></option>
                                 <option value="true">AM</option>
                                 <option value="false">PM</option>
@@ -279,8 +304,30 @@
                         </td>
                         <!--/ko-->
                         <td>
-                            <a href="#" data-bind="click:$root.moreTime,visible:Time2()!=true">Add time</a><a href="#" data-bind="click:$root.lessTime,visible:Time2()==true">Delete time</a><br /> <a href="#" data-bind="click:$root.moreService">Add Service Code</a>
-                           <br /> <a href="#" data-bind="click:$root.deleteRow">Delete</a>
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Select Action
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <ul style="list-style:none">
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bind="click:$root.moreTime,visible:Time2()!=true">Add time</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bind="click:$root.lessTime,visible:Time2()==true">Delete time</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bind="click:$root.moreService">Add Service Code</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bind="click:$root.deleteRow">Delete Service Code</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                           
+                            @*<a href="#" data-bind="click:$root.moreTime,visible:Time2()!=true">Add time</a><a href="#" data-bind="click:$root.lessTime,visible:Time2()==true">Delete time</a><br /> <a href="#" data-bind="click:$root.moreService">Add Service Code</a>
+        <br /> <a href="#" data-bind="click:$root.deleteRow">Delete</a>*@
                         </td>
                     </tr>
 
@@ -289,15 +336,15 @@
                 <tfoot>
                     <tr data-bind="visible:HasTime2()!=true">
                         <td colspan="8" align="right">
-                            <input type="button" value="save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
-                            <input type="button" value="undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />
+                            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
+                            @*<input type="button" value="undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />*@
                         </td>
                     </tr>
 
                     <tr data-bind="visible:HasTime2()==true">
                         <td colspan="12" align="right">
-                            <input type="button" value="save" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
-                            <input type="button" value="undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />
+                            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true" class="btn btn-default" />
+                            @*<input type="button" value="undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />*@
                         </td>
                     </tr>
                 </tfoot>
