--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>SDTR Consulting LLC</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -22,7 +23,7 @@
                 </button>
 
 
-                <div class="navbar-brand"> <img src="~/Images/picture_logo.png" width="106" height="45"> &nbsp; &nbsp; <b style="color:white">SDTR<i>Care</i></b> </div>
+                <div class="navbar-brand"> <img src="~/Images/picture_logo.png" width="90" height="40"> &nbsp; &nbsp; <b style="color:white">SDTR<i>Care</i></b> </div>
 
 
             </div>
